# Akinator-Futbol-ML

./: .env.example  .gitignore  Graph_Analysis_Cartagena.ipynb  README.md  app.py  data_ingestion.py  dr_copper_eda.ipynb  export_tree_pdf.py  model.py  preprocessing.py  pyproject.toml
