[project]
name = "akinator-futbol-ml"
version = "0.1.0"
description = "Akinator de futbolistas con DecisionTreeClassifier y Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.40.0",
]
